--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -11,4 +11,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
+          max_post_count: 10
           feed_list: "https://qiita.com/PontaX/feed, https://zenn.dev/wattanx/feed, https://wattanx.hatenablog.com/rss"
