--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: 30
-          feed_list: "https://qiita.com/PontaX/feed, https://zenn.dev/wattanx/feed, https://wattanx.hatenablog.com/rss"
+          feed_list: "https://qiita.com/PontaX/feed, https://zenn.dev/wattanx/feed"
